--- a/app/globals.css
+++ b/app/globals.css
@@ -27,11 +27,13 @@ body {
   color: #262626;
   text-transform: uppercase;
   background: linear-gradient(90deg, #f9572a, #ffc905);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-size: cover;
   background-position: center;
   font-family: "Montserrat", sans-serif;
+  margin-top: 150px;
 }
 
 .not-found p,
@@ -39,4 +41,22 @@ body {
   font-size: 1.5rem;
   font-weight: 500;
   color: #ddd8d8;
+}
+
+.loading {
+  font-size: 30px;
+  text-align: center;
+  animation: loading 1.2s ease-in-out infinite;
+}
+
+@keyframes loading {
+  0% {
+    color: #e9e9e9;
+  }
+  50% {
+    color: #b89b84;
+  }
+  100% {
+    color: #e9e9e9;
+  }
 }
